--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -31,7 +31,7 @@ sanguins, processus appellé \emph{angiogenèse}.
 %%%% Il faut fair un paragraphe pour que wrapfigure puisse se fixer là
 %%%% Pour ne pas que ca ait l'apparence d'un paragraphe, on supprime l'indentation
 %%\noindent 
-Les cellules endothéliales, cellules qui recouvrent la paroi intérieure des vaisseaux sanguins et destinataires de ces facteurs de croissance, vont alors construire des nouveaux vaisseaux sanguins par chimiotactisme c'est à dire que les nouveaux vaisseaux sanguins sont orientés dans le sens où la concentration de facteur de croissance est la plus forte. Ainsi la tumeur se créé son propre réseau sanguin~: la \emph{néovascularisation}. La nourriture et l'oxygène redeviennent de nouveau abondants. 
+Les cellules endothéliales, cellules qui recouvrent la paroi intérieure des vaisseaux sanguins et destinataires de ces facteurs de croissance, vont alors construire des nouveaux vaisseaux sanguins par chimiotactisme \cad  que les nouveaux vaisseaux sanguins sont orientés dans le sens où la concentration de facteur de croissance est la plus forte. Ainsi la tumeur se crée son propre réseau sanguin~: la \emph{néovascularisation}. La nourriture et l'oxygène redeviennent de nouveau abondants. 
 Les cellules qui étaient en hypoxie vont alors se remettre à proliférer jusqu'à ce que de nouveau, il y ait surpopulation. Et ainsi de suite, le cycle continue. On peut visualiser ce cycle sur le schéma présenté Figure~\ref{fig:schema_angio}. Notez qu'une cellule saine n'est en général jamais quiescente~: si les conditions extérieures ne sont pas bonnes (surpopulation, manque de nutriments, etc), elle va activer son auto-destruction~: c'est l'\emph{apoptose}. A cause de mutations, les cellules cancéreuses sont nettement moins (voire pas) sensibles à ce mécanisme. 
 %\lipsum[1]
 
@@ -47,13 +47,13 @@ Les cellules qui étaient en hypoxie vont alors se remettre à proliférer jusqu
 \end{picture}
 \captionof{figure}{\label{fig:schema_dissemination_metastase} Dissémination des métastases.}
 \end{wrapfigure}
-L'ensemble du processus métastatique est résumé sur le schéma présenté Figure~\ref{fig:schema_dissemination_metastase}. Décrivons le. La tumeur primaire  cherche continuement à se vasculariser toujours plus, mais paradoxalement, sa croissance va endommager le réseau sanguin qui l'irrigue. Une partie des cellules tumorales (cellules invasives) va alors pouvoir pénétrer dans les voies sanguines. La plupart de ces essaims seront éliminés par le système immunitaire. Une partie arrivera à s'installer dans un autre organe~: elle forme des tumeurs filles appelées~\emph{métastases}. Chaque type de cancer a une préférence métastatique~: le GIST\todo[noline]{\url{http://www.nature.com/nrc/journal/v9/n4/abs/nrc2622.html} + Langely 2011}, le cancer du pancréas ou du colon migre au foie; le cancer du sein, du rein, de la vessie et de l'estomac migre dans les poumons; le cancer de la prostate migre dans les os. Les métastases s'installent généralement dans des endroits bien vascularisé~:  les poumons et le foie sont les 2 organes les plus touchés [REF].
+L'ensemble du processus métastatique est résumé sur le schéma présenté Figure~\ref{fig:schema_dissemination_metastase}. Décrivons le. La tumeur primaire  cherche continuement à se vasculariser toujours plus, mais paradoxalement, sa croissance va endommager le réseau sanguin qui l'irrigue. Une partie des cellules tumorales (cellules invasives) va alors pouvoir pénétrer dans les voies sanguines. La plupart de ces essaims seront éliminés par le système immunitaire. Une partie arrivera à s'installer dans un autre organe~: elle forme des tumeurs filles appelées~\emph{métastases}. Chaque type de cancer a une préférence métastatique~: le GIST\todo[noline]{\url{http://www.nature.com/nrc/journal/v9/n4/abs/nrc2622.html} + Langely 2011}, le cancer du pancréas ou du colon migre au foie; le cancer du sein, du rein, de la vessie et de l'estomac migre dans les poumons; le cancer de la prostate migre dans les os. Les métastases s'installent généralement dans des endroits bien vascularisés~:  les poumons et le foie sont les 2 organes les plus touchés [REF].
 
 
-De simple cellules ne pourraient pas nicher dans un autre organe que celui auquel elles appartenaient au départ. Les cellules tumorales le peuvent, car à force de divisions elles s'\emph{indifférencient}. Autrement dit, elles s'approchent de ce qu'elles étaient au stade embryonnaire~: des cellules souches qui en se différenciant formeront aussi bien des cellules de l'intestin que des cellules du foie. Dans le cas de métastases hépatiques en provenance de GIST, les cellules cancéreuses provenant de l'intestin ne sont donc pas reconnues comme étranger au foie et la métastase peut s'installer. La métastase créera ensuite son propre réseau néovasculaire tout comme une tumeur primaire.
+De simples cellules ne pourraient pas nicher dans un autre organe que celui auquel elles appartenaient au départ. Les cellules tumorales le peuvent, car à force de divisions elles s'\emph{indifférencient}. Autrement dit, elles s'approchent de ce qu'elles étaient au stade embryonnaire~: des cellules souches qui en se différenciant formeront aussi bien des cellules de l'intestin que des cellules du foie. Dans le cas de métastases hépatiques en provenance de GIST, les cellules cancéreuses provenant de l'intestin ne sont donc pas reconnues comme étrangères au foie et la métastase peut s'installer. La métastase créera ensuite son propre réseau néovasculaire tout comme une tumeur primaire.
 
 \section{Les traitements}
-A l'heure actuelle aucun traitement ne permet de guérir de manière sûre les cancers, d'autant plus s'ils sont avancés.  Cependant plusieurs techniques existent pour prolonger et/ou améliorer la vie des patients.
+A l'heure actuelle aucun traitement ne permet de guérir de manière sûre les cancers, d'autant plus s'ils sont avancés. Cependant plusieurs techniques existent pour prolonger et/ou améliorer la vie des patients.
 \paragraph{La chirurgie} ne peut-être réalisée que sur des cancers primaires %, non métastasés et donc 
 détectés tôt. C'est la première option considérée par le corps médical (bien que la chirurgie elle-même puisse être source de dissémination de métastase, \cf par exemple  \url{http://www.sciencedirect.com/science/article/pii/S0748798305000089}).
 
@@ -63,7 +63,7 @@ ne peut cependant être utilisée que pour de petites tumeurs, ne dépassant pas
 \paragraph{La radiothérapie} consiste à irradier une zone de l'organisme par une forte dose de rayons X (et rayonnement bêta pour la curiethérapie). 
 %Ceci produit des radicaux libres par radiolyse de l'eau, et donc altération de l'ADN. 
 Ceci engendre une altération de l'ADN et permet de réintroduire de l'apoptose dans le cycle cellulaire. 
-%Ceci a pour effet de détruire les cellules qui se multiplient  et donc, par voie de conséquence, les cellules cancéreuses. 
+%Ceci a pour effet de détruire les cellules qui se multiplient et donc, par voie de conséquence, les cellules cancéreuses. 
 %Cette méthode présente les mêmes limitations que la radiofréquence à savoir que son efficacité est limitée à des petites tumeurs. 
 Cette méthode est également utilisée sur de petites (ou moyennes) tumeurs, car sur d'importantes tumeurs, il y a des effets secondaires. 
 La radiothérapie peut être %est souvent 
@@ -73,14 +73,15 @@ utilisée à titre palliatif sur des petites métastases (pulmonaires notamment)
 %%Ce type de molécules est suffisamment petit pour pénétrer à l'intérieur des cellules. 
 %% Elle agit 
 Après avoir pénétré à l'intérieur des cellules, ce type de molécules agit 
-sur toutes les cellules en division trop rapide en affectant soit directement la mitose, soit la duplication de l'ADN. Ceci explique ses principaux effets secondaires car elle va impacter aussi sur des cellules saines à division naturellement rapide comme les cellules responsables de la pousse des cheveux, les cellules intestinales (de l'épithélium), les cellules sanguines (à l'origine d'affaiblissement du système immunitaire et d'anémies notamment) ou encore les gamètes.
+sur toutes les cellules en division trop rapide en affectant soit directement la mitose, soit la duplication de l'ADN. 
+Ceci explique ses principaux effets secondaires car elle va impacter aussi des cellules saines à division naturellement rapide comme les cellules responsables de la pousse des cheveux, les cellules intestinales (de l'épithélium), les cellules sanguines (à l'origine d'affaiblissements du système immunitaire et d'anémies notamment) ou encore les gamètes.
 
-\paragraph{Les thérapies ciblées} sont des médicaments qui peuvent également être administrés par voies intraveineuses, mais sont de plus en plus prescrit en %métronomique sous forme de cachet à. Des versions
+\paragraph{Les thérapies ciblées} sont des médicaments qui peuvent également être administrés par voies intraveineuses, mais sont de plus en plus prescrits en %métronomique sous forme de cachet à. Des versions
 systémiques 
 %commencent également à voir le jour 
-(\ie sous forme de comprimés à prendre à heures fixes). Bien qu'étant diffusées dans tout l'organisme, ces thérapies  ciblent un type spécifique de voie moléculaire (ou de récepteur), voie moléculaire généralement caratéristique des cellules malignes. Ce peut être des anticorps (X-mab) ou bien de petites molécules ciblant les fonctions tyrosines kinases (X-inib), fonctions impliquées dans l'activité cellulaire et la mitose. 
+(\ie sous forme de comprimés à prendre à heures fixes). Bien qu'étant diffusées dans tout l'organisme, ces thérapies  ciblent un type spécifique de voies moléculaires (ou de récepteurs), voies moléculaires généralement caractéristiques des cellules malignes. Ce peut être des anticorps (X-mab) ou bien de petites molécules ciblant les fonctions tyrosines kinases (X-inib), fonctions impliquées dans l'activité cellulaire et la mitose. 
 
-En exemple on pourra citer l'\emph{imatinib} (Glivec) qui se fixe sur les récepteurs cellulaires (récepteurs de tyrosine kinase, RTK) commandant l'activité intra cellulaire. En inhibant ces récepteurs, l'apoptose tend à se réactiver dans les cellules défectueuses. On peut également citer le \emph{bevacizumab} (Avastin), qui inhibe l'angiogenèse, en se fixant sur les récepteurs de VEGF (que l'on abrège communément VEGFR). D'autres molécules, comme  le sorafenib ou le sunitinib, ont des effets multiples. 
+En exemple on pourra citer l'\emph{imatinib} (Glivec) qui se fixe sur les récepteurs cellulaires (récepteurs de tyrosine kinase, RTK) commandant l'activité intra-cellulaire. En inhibant ces récepteurs, l'apoptose tend à se réactiver dans les cellules défectueuses. On peut également citer le \emph{bevacizumab} (Avastin), qui inhibe l'angiogenèse, en se fixant sur les récepteurs de VEGF (que l'on abrège communément VEGFR). D'autres molécules, comme  le sorafenib ou le sunitinib, ont des effets multiples. 
 Le \emph{sorafenib} (Nexavar) est un inhibiteur, à la fois, de VEGFR et de Raf-kinase (tyrosine kinase intervenant dans la cascade de kinases activées lors de la mitose). 
 Le \emph{sunitinib} (Sutent) inhibe également les VEGFRs ainsi que les KIT-kinases (protéïnes CD117, qui sont des tyrosines kinases très souvent exprimées dans le cas de GIST, kinases normalement produites uniquement par les cellules souches).
 \todo[noline]{Kit --> commande la survie, la prolif, ou la division cellulaire}
@@ -135,14 +136,14 @@ Le scanner est un examen médical qui permet d'acquérir des images d'une partie
 Un scanner procède par acquisition d'images en couches. En ce qui concerne le scanner du thorax, le patient est \og découpé \fg{} de part en part 
 \url{http://www.impactscan.org/download/msctdose.pdf} selon le plan axial (\cf Figure~\ref{fig:schema_coupe} présentant l'orientation des plans de coupe). 
 Sur chacun de ces plans on mesure l'absorption aux rayons~X~: la \emph{tomodensitométrie}. Cette absorption dépend de la densité du tissu mais pas seulement~: elle dépend aussi de sa nature. 
-Chaque constituant de l'organisme à sa propre tomodensimétrie. La tomodensimétrie se mesure en \emph{unité Hounsfield}~(HU). Sur cette échelle, l'absorption au rayons~X de l'eau est définie comme étant zéro. Toute autre tomodensimétrie est alors exprimée relativement à cette absorption de référence. Par exemple l'air a une tomodensimétrie de \numprint[HU]{-1000}, le poumon de \numprint[HU]{-500}, la graisse de \numprint{-100} à \numprint[HU]{-50}, le foie autour de \numprint[HU]{+50}, les os entre \numprint{+700} et \numprint[HU]{3000}\todo{REF ?} selon s'ils sont spongieux ou non. La tomodensimétrie est donc très variable. Pour pouvoir visualiser cette quantité, il est nécessaire de choisir une échelle adaptée à ce que l'on veut regarder. L'échelle sera défini par~:
+Chaque constituant de l'organisme à sa propre tomodensimétrie. La tomodensimétrie se mesure en \emph{unité Hounsfield}~(HU). Sur cette échelle, l'absorption au rayons~X de l'eau est définie comme étant zéro. Toute autre tomodensimétrie est alors exprimée relativement à cette absorption de référence. Par exemple l'air a une tomodensimétrie de \numprint[HU]{-1000}, le poumon de \numprint[HU]{-500}, la graisse de \numprint{-100} à \numprint[HU]{-50}, le foie autour de \numprint[HU]{+50}, les os entre \numprint{+700} et \numprint[HU]{3000} \todo{REF ?} selon s'ils sont spongieux ou non. La tomodensimétrie est donc très variable. Pour pouvoir visualiser cette quantité, il est nécessaire de choisir une échelle adaptée à ce que l'on veut regarder. L'échelle sera définie par~:
 \begin{myitemize}
-\item deux absorptions limites que l'on choisi. Le noir est associé à la plus petites de ces bornes, le blanc à l'autre. Au delà de ces bornes aucune nuance de couleur n'apparaitra.
-\item une fonction qui va définir la manière dont on passe du noir au blanc. Généralement, une fonction linéaire est considéree c-à-d que la variation du noir au blanc est constante.
+\item deux absorptions limites que l'on choisit. Le noir est associé à la plus petites de ces bornes, le blanc à l'autre. Au-delà de ces bornes aucune nuance de couleur n'apparaitra.
+\item une fonction qui va définir la manière dont on passe du noir au blanc. Généralement, une fonction linéaire est considérée \cad que la variation du noir au blanc est constante.
 \end{myitemize}
-Par exemple, si l'on s'intéresse aux poumons, on pourra fixer l'échelle entre \numprint[HU]{-1200}  et~\numprint[HU]{+200} (qui est l'échelle suggérée par le logiciel OsiriX dans le cas du poumon). Avec cette échelle le foie apparait tout blanc avec très peu de nuances. Elle donc inadaptée si l'on souhaite observer le foie~! Pour le foie, une échelle allant de \numprint{-135} à \numprint[HU]{+215} par exemple, sera beaucoup plus adaptée. 
+Par exemple, si l'on s'intéresse aux poumons, on pourra fixer l'échelle entre \numprint[HU]{-1200}  et~\numprint[HU]{+200} (qui est l'échelle suggérée par le logiciel OsiriX dans le cas du poumon). Avec cette échelle le foie apparait tout blanc avec très peu de nuances. Elle est donc inadaptée si l'on souhaite observer le foie~! Pour le foie, une échelle allant de \numprint{-135} à \numprint[HU]{+215} par exemple, sera beaucoup plus adaptée. 
 Une telle échelle est illustrée plus loin dans ce manuscrit, \cf Figure~\ref{fig:schema_correspondance_gris} page~\pageref{fig:schema_correspondance_gris}.
-Cependant pour le foie les variations de tomodensimétrie sont assez faible, même en cas de maladie (métastases notamment). Les médecins ont alors recours a une méthode particulière pour augmenter le constrate des images~: le scanner avec produit de contraste iodé (PCI).
+Cependant pour le foie les variations de tomodensimétrie sont assez faibles, même en cas de maladie (métastases notamment). Les médecins ont alors recours à une méthode particulière pour augmenter le contraste des images~: le scanner avec produit de contraste iodé (PCI).
 
 
 \subsection{Le scanner avec produit de contraste iodé (PCI)}
@@ -159,22 +160,29 @@ Cependant pour le foie les variations de tomodensimétrie sont assez faible, mê
 %\vspace{-10mm}
 %\caption{\label{fig:schema_irrig_foie} Schéma de l'irrigation du foie.}
 %\end{wrapfigure}
-Pour réaliser ce type d'examen, on procède comme pour un simple scanner avec le même équipement. La différence réside dans l'injection en intraveineuse d'un produit de contraste iodé (PCI), juste avant l'examen. L'iode ayant un fort taux d'absorption des rayons~X, il va éclaircir l'ensemble des zones dans lequel il se trouve (on appelle ceci le rehaussement). 
-En ce qui concerne le foie, pour comprendre pourquoi le foie sain est plus éclaircit par le PCI que les métastases, nous devons nous intéressé à la manière dont arrive le PCI au foie et à la tumeur. 
+Pour réaliser ce type d'examen, on procède comme pour un simple scanner avec le même équipement. La différence réside dans l'injection en intraveineuse d'un produit de contraste iodé (PCI), juste avant l'examen. 
+L'iode ayant un fort taux d'absorption des rayons~X, il va éclaircir l'ensemble des zones dans lequel il se trouve (on appelle ceci le rehaussement). 
+En ce qui concerne le foie, pour comprendre pourquoi le foie sain est plus éclairci par le PCI que les métastases, nous devons nous intéresser à la manière dont arrive le PCI au foie et à la tumeur. 
 La Figure~\ref{fig:schema_irrig_foie} présente le schéma général de la vascularisation du foie. 
 Il possède une double vascularisation. La première est apportée directement depuis le c{\oe}ur par l'artère hépatique. Du sang riche en nutriments (glucose et oygène) vient ainsi irriguer les cellules hépatiques. La seconde provient d'une dérivation. 
-Le sang veineux en provenance du système digestif ne retourne pas directement au c{\oe}ur~: il est envoyé au foie par la veine porte. Ce sang bien qu'étant pauvre en oxygène, est riche en glucose puisqu'il contient l'ensemble des éléments digérés. Dans un foie sain, la vascularisation portale est de l'ordre 70\% et la vascularisation artérielle de l'ordre de 30\%. Dans une tumeur hépatique, ce ratio est inversé~! REFF\todo{ref} En effet, en grandissant la tumeur va accroître ces besoins en glucose mais aussi en oxygène~: la néovascularisation se fait donc principalement depuis la vascularisation artérielle. 
+Le sang veineux en provenance du système digestif ne retourne pas directement au c{\oe}ur~: il est envoyé au foie par la veine porte. Ce sang bien qu'étant pauvre en oxygène, est riche en glucose puisqu'il contient l'ensemble des éléments digérés. Dans un foie sain, la vascularisation portale est de l'ordre de 70\% et la vascularisation artérielle de l'ordre de 30\%. Dans une tumeur hépatique, ce ratio est inversé~! REFF\todo{ref} En effet, en grandissant la tumeur va accroître ses besoins en glucose mais aussi en oxygène~: la néovascularisation se fait donc principalement depuis la vascularisation artérielle. 
 
 
-Revenons au PCI. Dans la mesure où il y a deux voies sanguine pour accéder au foie, il y a deux temps caractéristiques~:
+Revenons au PCI. Dans la mesure où il y a deux voies sanguines pour accéder au foie, il y a deux temps caractéristiques~:
 \begin{myitemize}
 \item Le \emph{temps artériel.} C'est le temps après l'injection, que le PCI met pour parvenir au foie par la voie artérielle. Il est d'environ 30 secondes.\todo{Ref}
 \item Le \emph{temps portal.} C'est le temps après l'injection, que le PCI met pour parvenir au foie par la voie portale. Il est d'environ 70 secondes. 
 \end{myitemize}
-Les scanners réalisés avec PCI, sont effectués au temps portal. Ainsi au moment de l'acquisition de l'image, le PCI se trouve majoritairement dans les tissus vascularisés par la voie portale \ie le foie sain. Le tissu tumoral, beaucoup moins irriguer par voie portale contiendra donc nettement moins de PCI. Ceci se traduit directement sur le contraste de l'image médicale~: le tissu sain ayant fortement éclaircit, le tissu tumoral apparait de manière beaucoup plus évidente, en sombre. On pourra même distinguer des nuances au sein de la tumeur (entre le centre et le pourtour notamment), ce qui va particulièrement nous intéresser pour tout ce qui concerne l'\hetero tumorale. L'ensemble des scanners présentés dans cet ouvrage a été réalisé avec un PCI.
+Les scanners réalisés avec PCI, sont effectués au temps portal. Ainsi au moment de l'acquisition de l'image, le PCI se trouve majoritairement dans les tissus vascularisés par la voie portale \ie le foie sain. Le tissu tumoral, beaucoup moins irrigué par voie portale contiendra donc nettement moins de PCI. Ceci se traduit directement sur le contraste de l'image médicale~: le tissu sain ayant fortement éclairci, le tissu tumoral apparait de manière beaucoup plus évidente, en sombre. On pourra même distinguer des nuances au sein de la tumeur (entre le centre et le pourtour notamment), ce qui va particulièrement nous intéresser pour tout ce qui concerne l'\hetero tumorale. L'ensemble des scanners présentés dans cet ouvrage a été réalisé avec un PCI.
 
 \section{Evaluation clinique de la réponse au traitement~: le critère RECIST}
-La surveillance des patients ayant des métastases hépatiques de GIST est assurée grâce à des scanners avec PCI réalisés environ tous les 2 mois. Ainsi, tous les 2 mois, les médecins acquièrent une série d'images en niveaux de gris, chaque image représentant une coupe transversale du thorax du patient. Les images que nous possédons, ont une résolution de $512\times512$ pixels, et chaque image est espacé d'environ $1mm$, ce qui représente environ 800 images par scanners du thorax. Le foie est présent sur environ 200 de ces coupes. Ceci représente donc un nombre importants de pixels. Ainsi pour évaluer la progression de la tumeur, il est nécessaire d'avoir un critère, qui permet de synthétiser les informations apportés par tout ces nombreux pixels. Le critère RECIST (de l'anglais Response Evaluation Criteria In Solid Tumors) est actuellement utilisé. Il consiste à ne retenir de chaque scanner qu'une seule et unique information~: le diamètre de la métastase (ou de la plus grosse des métastases si le patient en a plusieurs). Si ce diamètre décroît ou est stable, alors on considère le traitement efficace. S'il augmente de plus de 10\,\%, alors l'échec thérapeutique est considéré (et dans ce cas là, le traitement est alors changé). Ce critère  a l'avantage d'être simple. Ceci étant, il a déjà démontré ces limites \cf.~\cite{benjamin2007we} et \url{http://jco.ascopubs.org/content/25/13/1760.full}, principalement dans l'évaluation d'efficacité de traitement antiangiogénique qui font apparaître beaucoup de nécrose. 
+La surveillance des patients ayant des métastases hépatiques de GIST est assurée grâce à des scanners avec PCI réalisés environ tous les 2 mois. Ainsi, tous les 2 mois, les médecins acquièrent une série d'images en niveaux de gris, chaque image représentant une coupe transversale du thorax du patient. Les images que nous possédons, ont une résolution de $512\times512$ pixels, et chaque image est espacée d'environ $1mm$, ce qui représente environ 800 images par scanners du thorax. 
+Le foie est présent sur environ 200 de ces coupes. 
+Ceci représente donc un nombre important de pixels. 
+Ainsi pour évaluer la progression de la tumeur, il est nécessaire d'avoir un critère, qui permette de synthétiser les informations apportées par tous ces nombreux pixels. 
+Le critère RECIST (de l'anglais Response Evaluation Criteria In Solid Tumors) est actuellement utilisé. 
+Il consiste à ne retenir de chaque scanner qu'une seule et unique information~: le diamètre de la métastase (ou de la plus grosse des métastases si le patient en a plusieurs). Si ce diamètre décroît ou est stable, alors on considère le traitement efficace. S'il augmente de plus de 10\,\%, alors l'échec thérapeutique est considéré (et dans ce cas là, le traitement est alors changé). Ce critère  a l'avantage d'être simple. 
+Ceci étant, il a déjà démontré ses limites \cf.~\cite{benjamin2007we} et \url{http://jco.ascopubs.org/content/25/13/1760.full}, principalement dans l'évaluation de l'efficacité de traitements antiangiogéniques qui font apparaître  beaucoup de nécrose. 
 D'autres critères sont à l'étude, dont le critère Choi notamment (\cf.~\cite{choi2008response}), qui prend en compte aussi les densités internes de la métastase. 
 
 
@@ -201,8 +209,8 @@ Hirota \etal\ ont démontré la présence d'altérations moléculaires du gène 
 En plus de ces mutations de la tumeur primaire, de secondes mutations ont été identifiées chez les patients atteints de GIST avancé prétraité avec un inhibiteur de tyrosine kinase. A l'heure actuelle, 10 ensembles moléculaires différents de GIST avec différentes altérations moléculaires ont été identifiés. 
 Chez les patients avec une mutation du gène KIT, une résistance à l'imatininb est fréquemment observée, comme reporté dans~\cite{Blay2011}. 
 Chez les autres patients, l'imatinib contrôle les lésions métastatiques pendant une période plus ou moins longue, autour de~20-24 mois dans~85\% des cas. 
-Les praticiens doivent ensuite changer pour autre molécule, ou bien utiliser une thérapie alternative. Comme le pronostic et la sensibilité aux thérapies ciblées dépend de chaque patient, notre but est de développer un modèle mathématique basé sur les images médicales des métastases au foie qui soit dépendant de chaque patient.
-Nous nous intéressons ici aux GISTs avancés afin de déterminer, pour chaque patient, aussi bien le moment de l'émergence de mutations dans les cellules cancéreuses, que le temps de rechute après la première ligne et la seconde ligne ainsi que des aspects géométriques de la croissance tumorale.
+Les praticiens doivent ensuite changer pour autre molécule, ou bien utiliser une thérapie alternative. Comme le pronostic et la sensibilité aux thérapies ciblées dépendent de chaque patient, notre but est de développer un modèle mathématique basé sur les images médicales des métastases au foie qui soit dépendant de chaque patient.
+Nous nous intéressons ici aux GISTs avancés afin de déterminer, pour chaque patient, aussi bien le moment de l'émergence de mutations dans les cellules cancéreuses, que le temps de rechute après la première ligne et la seconde ligne de traitement ainsi que des aspects géométriques de la croissance tumorale.
 
 
 Ensuite, les nouveaux agents anti-cancéreux avec des mécanismes d'actions ciblés, comme ceux utilisés pour traiter les GISTs, ont démontré les limitations inhérentes et l'inadéquation de  l'évaluation usuelle (\ie le critère RECIST, \cf~\cite{suzuki2008}) de l'anatomie tumorale. En effet, celle-ci ne considère seulement que le plus large diamètre de la lésion. 
